--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ a {
 
 .text-and-img {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     width:auto;
     padding-left:0;
     gap:50px;
